--- a/includes/homepage.html
+++ b/includes/homepage.html
@@ -31,15 +31,18 @@
         <div class="box">
             <div class="row header header-row">
                 <div class="col-4">
+                    <span class="logoff-btn fa-stack fa-2x ms-4" data-bs-toggle="tooltip" data-bs-placement="top" title="Log off" title="Log off">
+                        <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
+                        <i class="fa-solid fa-arrow-right-from-bracket fa-stack-1x fa-inverse icon-color"></i>
+                    </span>
+                </div>
+                <div class="col-4">
                     <img class="logo" src="../images/logo.png" alt="">
+                    </a>
                 </div>
                 <div class="col-4">
                     <h1 class="header welcome">Welcome,&nbsp;<span id="name"> </span></h1>
-                    <a style="text-decoration: none;" href="../index.html">
-                        <h2 class="header change-user">That's not me!</h2>
-                    </a>
                 </div>
-                <div class="col-4"></div>
             </div>
 
             <div class="center">
@@ -103,7 +106,7 @@
                                             <i class="fa-solid icon-back-games fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-dice-five fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
-<!-- 
+                                        <!-- 
                                         <span class="material-icons">
                                             casino
                                         </span> -->
@@ -133,9 +136,8 @@
             </div>
         </div>
     </div>
-    </div>
-
 </body>
+
 <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
