--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -38,12 +38,7 @@
 
                 <div class="row highscore">
                     <div class="col-4">
-                        <span class="rank">
-                            <span class="fa-stack">
-                                <i class="fa-solid fa-circle fa-stack-2x"></i>
-                                <i class="fa-solid fa-1 fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </span>
+                        <i class="fa-solid fa-2xl fa-medal"></i>
                     </div>
                     <div class="col-4">
                         <span class="name"></span>
