--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -29,15 +29,30 @@
         <div class="box">
             <div class="row header header-row">
                 <div class="col-4">
-                    <img class="logo" src="../images/logo.png" alt="">
+                    
+
+
+                    <span class="icon-btn back-btn fa-stack fa-2x ms-4"  data-bs-toggle="tooltip" data-bs-placement="top" title="Go Back">
+                        <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
+                        <i class="fa-solid fa-arrow-left fa-stack-1x fa-inverse icon-color"></i>
+                    </span>
+
+                    <span class="icon-btn logoff-btn fa-stack fa-2x" data-bs-toggle="tooltip" data-bs-placement="top" title="Log off">
+                        <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
+                        <i class="fa-solid fa-arrow-right-from-bracket fa-stack-1x fa-inverse icon-color"></i>
+                    </span>
+
                 </div>
+
+                <div class="col-4">
+                    <img class="logo" src="../images/logo.png" alt="">
+
+                </div>
+
                 <div class="col-4">
                     <h1 class="header welcome">Welcome,&nbsp;<span id="name"> </span></h1>
-                    <a style="text-decoration: none;" href="../index.html">
-                        <h2 class="header change-user">That's not me!</h2>
-                    </a>
+
                 </div>
-                <div class="col-4"></div>
             </div>
 
             <div class="center">
@@ -98,7 +113,8 @@
                     <button name="28" class="btn-choice"><span class="material-icons">
                             directions_car_filled
                         </span>Vehicles</button>
-                    <button name="29" class="btn-choice"><i class="fa-solid fa-comment-dots material-icons"></i>Comics</button>
+                    <button name="29" class="btn-choice"><i
+                            class="fa-solid fa-comment-dots material-icons"></i>Comics</button>
                     <button name="30" class="btn-choice"><span class="material-icons">
                             watch
                         </span>Gadgets</button>
