--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -51,31 +51,35 @@
             <div class="game hide">
 
                 <!-- game header -->
+
                 <div class="row header">
                     <div class="col-4 user_data">
+
+                        <!-- progress -->
                         <div class="icon">
                             <i class="fa-solid fa-hashtag fa-xl"></i>
                             <p class="progress-num">Question <span class="currentQ"></span> out of <span
                                     class="maxQ"></span></p>
                         </div>
 
+                        <!-- timer -->
                         <div class="progress">
-
                             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100"
-                                aria-valuemin="0" aria-valuemax="100"><i class="fa-regular fa-clock"></i> <span class="seconds"> 30</span></div>
+                                aria-valuemin="0" aria-valuemax="100"><i class="fa-regular fa-clock"></i> <span
+                                    class="seconds"> 30</span></div>
                         </div>
-
                     </div>
-                    <div class="col-4">
 
+                    <!-- logo -->
+                    <div class="col-4">
                         <img class="logo" src="../images/logo.png" alt="">
                     </div>
 
-                    <div class="col-4 user_data">
+                    <!-- score and name -->
+                    <div class="col-3 user_data">
                         <div class="icon">
                             <i class="fa-solid fa-user-large fa-xl"></i>
                             <span class="player progress-num"></span>
-
                         </div>
 
                         <div class="icon">
@@ -83,10 +87,17 @@
                             <span class="score progress-num"></span>
 
                         </div>
-
-
                     </div>
 
+                    <!-- endgame -->
+                    <div class="col-1 turnoff-col">
+                        <span class="fa-stack fa-2x turnoff" data-bs-toggle="tooltip" data-bs-placement="top"
+                            title="End Game">
+                            <i class="fa-solid fa-circle fa-stack-2x icon-back-off"></i>
+                            <i class="fa-solid fa-power-off fa-stack-1x fa-inverse icon-off"></i>
+                        </span>
+
+                    </div>
                 </div>
 
                 <!-- game questions -->
@@ -97,15 +108,11 @@
                         <h1 id="question"></h1>
                     </div>
                     <div class="row btn-choice btn-first-2">
-
                         <button class="choice mt-3 animate__animated choice-left choice-hover"></button>
-
                         <button class="choice mt-3 animate__animated choice-hover"></button>
                     </div>
                     <div class="row btn-choice btn-last-2">
-
                         <button class="choice mt-3 animate__animated choice-left choice-hover"></button>
-
                         <button class="choice mt-3 animate__animated choice-hover"></button>
                     </div>
                 </div>
@@ -140,6 +147,7 @@
                 </div>
             </div>
 
+            <!-- correct score indicator -->
             <div class="yes hide">
                 <p class="plus animate__animated animate__bounceIn">+10</p>
             </div>
@@ -150,7 +158,7 @@
                 data-bs-keyboard="false" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
-                        <div class="modal-body">
+                        <div class="modal-body end-body">
                             <h1 class="congratz mb-3">Nice Job!</h1>
                             <p class="summery">You got <strong> <span class="correctNum"></span></strong> out of
                                 <span class="maxQ"></span> questions.
@@ -164,6 +172,28 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Are you sure modal -->
+
+            <div class="modal fade" tabindex="-1" id="sure-modal" tabindex="-1" aria-labelledby="surelabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Are you sure you want to stop the game?</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Stopping will consider rest of the questions as incorrect.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger sure-yes" data-bs-dismiss="modal">Yes</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
