--- a/includes/homepage.html
+++ b/includes/homepage.html
@@ -31,7 +31,8 @@
         <div class="box">
             <div class="row header header-row">
                 <div class="col-4">
-                    <span class="logoff-btn fa-stack fa-2x ms-4" data-bs-toggle="tooltip" data-bs-placement="top" title="Log off" title="Log off">
+                    <span class="logoff-btn fa-stack fa-2x ms-4" data-bs-toggle="tooltip" data-bs-placement="top"
+                        title="Log off" title="Log off">
                         <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                         <i class="fa-solid fa-arrow-right-from-bracket fa-stack-1x fa-inverse icon-color"></i>
                     </span>
@@ -63,9 +64,7 @@
                                             emoji_events
                                         </span> -->
 
-                                        <span class="fa-stack fa-xl fifty animate__animated"
-                                            title="50/50 - Reavel 2 wrong answers!" data-bs-toggle="tooltip"
-                                            data-bs-placement="top">
+                                        <span class="fa-stack fa-xl">
                                             <i class="fa-solid icon-back-trophy fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-trophy fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
@@ -84,9 +83,7 @@
                                             check_circle
                                         </span> -->
 
-                                        <span class="fa-stack fa-xl fifty animate__animated"
-                                            title="50/50 - Reavel 2 wrong answers!" data-bs-toggle="tooltip"
-                                            data-bs-placement="top">
+                                        <span class="fa-stack fa-xl">
                                             <i class="fa-solid icon-back-check fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-check fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
@@ -100,9 +97,7 @@
 
                                 <div class="stats row">
                                     <div class="col-3">
-                                        <span class="fa-stack fa-xl fifty animate__animated"
-                                            title="50/50 - Reavel 2 wrong answers!" data-bs-toggle="tooltip"
-                                            data-bs-placement="top">
+                                        <span class="fa-stack fa-xl">
                                             <i class="fa-solid icon-back-games fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-dice-five fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
