--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -105,7 +105,7 @@
                             brush
                         </span>Art</button>
                     <button name="26" class="btn-choice"><span class="material-icons">
-                            remember_me
+                        face_retouching_natural
                         </span>Celebrities</button>
                     <button name="27" class="btn-choice"><span class="material-icons">
                             cruelty_free
