--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -15,6 +15,10 @@
     font-family: 'Sora', sans-serif;
 }
 
+.start{
+    justify-content: start;
+}
+
 .logo {
     width: 40%;
     margin-left: auto;
