--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -26,7 +26,7 @@
 <body>
 
     <div class="container">
-        <div style="justify-content: start;" class="box">
+        <div class="box start">
             <img class="logo" src="../images/logo.png" alt="logo">
             <div class="row leaderboard">
 
@@ -48,7 +48,7 @@
                     </div>
                 </div>
 
-                <div class="row highscore two">
+                <div class="row highscore">
                     <div class="col-4"><span class="rank">
                             <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-                <div class="row highscore three">
+                <div class="row highscore">
                     <div class="col-4"><span class="rank"> <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-3 fa-stack-1x fa-inverse"></i>
@@ -73,7 +73,7 @@
                     <div class="col-4"><span class="score"></span></div>
                 </div>
 
-                <div class="row highscore four">
+                <div class="row highscore">
                     <div class="col-4"><span class="rank"> <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-4 fa-stack-1x fa-inverse"></i>
@@ -82,7 +82,7 @@
                     <div class="col-4"><span class="score"></span></div>
                 </div>
 
-                <div class="row highscore five">
+                <div class="row highscore">
                     <div class="col-4"> <span class="rank"> <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-5 fa-stack-1x fa-inverse"></i>
