--- a/includes/homepage.html
+++ b/includes/homepage.html
@@ -42,7 +42,7 @@
                     </a>
                 </div>
                 <div class="col-4">
-                    <h1 class="header welcome">Welcome,&nbsp;<span id="name"> </span></h1>
+                    <span class="header welcome">Welcome,&nbsp;<span id="name"> </span></span>
                 </div>
             </div>
 
