--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="col-4">
-                    <h1 class="header welcome">Welcome,&nbsp;<span id="name"> </span></h1>
+                    <span class="header welcome">Welcome,&nbsp;<span id="name"> </span></span>
 
                 </div>
             </div>
