--- a/includes/homepage.html
+++ b/includes/homepage.html
@@ -37,11 +37,13 @@
                         <i class="fa-solid fa-arrow-right-from-bracket fa-stack-1x fa-inverse icon-color"></i>
                     </span>
                 </div>
-                <div class="col-4">
+
+                <div class="col-4 responsive-img">
                     <img class="logo" src="../images/logo.png" alt="">
                     </a>
                 </div>
-                <div class="col-4">
+
+                <div class="col-4 responsive-welcome">
                     <span class="header welcome">Welcome,&nbsp;<span id="name"> </span></span>
                 </div>
             </div>
@@ -49,50 +51,38 @@
             <div class="center">
                 <div class="row user-info">
                     <div class="profile-box col-12">
+                        <div class="row height profile-box-center">
 
-                        <div class="row height">
-                            <div class="col-6 height user-pic">
-
+                            <div class="col-md-6 height user-pic">
                                 <img class="height" src="../images/user.png" alt="">
                             </div>
 
-                            <div class="col-6 user-stats">
-
+                            <div class="col-md-6 user-stats">
                                 <div class="stats row">
                                     <div class="col-3">
-                                        <!-- <span class="material-icons">
-                                            emoji_events
-                                        </span> -->
-
                                         <span class="fa-stack fa-xl">
                                             <i class="fa-solid icon-back-trophy fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-trophy fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
-
                                     </div>
+
+
                                     <div class="col-9">
                                         <span><span class="highest"></span> Highest Score</span>
                                     </div>
-
                                 </div>
 
                                 <div class="stats row">
-
                                     <div class="col-3">
-                                        <!-- <span class="material-icons">
-                                            check_circle
-                                        </span> -->
-
                                         <span class="fa-stack fa-xl">
                                             <i class="fa-solid icon-back-check fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-check fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
-
                                     </div>
+
                                     <div class="col-9">
                                         <span><span class="correct"></span> Correct Answers</span>
                                     </div>
-
                                 </div>
 
                                 <div class="stats row">
@@ -101,10 +91,6 @@
                                             <i class="fa-solid icon-back-games fa-circle fa-stack-2x"></i>
                                             <i class="fa-solid fa-dice-five fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
-                                        <!-- 
-                                        <span class="material-icons">
-                                            casino
-                                        </span> -->
 
                                     </div>
                                     <div class="col-9">
