--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -58,7 +58,7 @@
                         <!-- progress -->
                         <div class="icon">
                             <i class="fa-solid fa-hashtag fa-xl"></i>
-                            <p class="progress-num">Question <span class="currentQ"></span> out of <span
+                            <p class="progress-num"><span class="responsive-hide"> Question</span> <span class="currentQ"></span> out of <span
                                     class="maxQ"></span></p>
                         </div>
 
@@ -71,7 +71,7 @@
                     </div>
 
                     <!-- logo -->
-                    <div class="col-4">
+                    <div class="col-4 responsive-logo">
                         <img class="logo" src="../images/logo.png" alt="">
                     </div>
 
@@ -97,19 +97,8 @@
                         <div class="icon">
                             <i class="fa-solid fa-trophy fa-xl"></i>
                             <span class="score progress-num"></span>
-
                         </div>
                     </div>
-
-                    <!-- endgame
-                    <div class="col-1 turnoff-col">
-                        <span class="fa-stack fa-2x turnoff" data-bs-toggle="tooltip" data-bs-placement="top"
-                            title="End Game">
-                            <i class="fa-solid fa-circle fa-stack-2x icon-back-off"></i>
-                            <i class="fa-solid fa-power-off fa-stack-1x fa-inverse icon-off"></i>
-                        </span>
-
-                    </div> -->
                 </div>
 
                 <!-- game questions -->
@@ -165,7 +154,6 @@
             </div>
 
             <!-- End Game Modal -->
-
             <div class="modal fade" id="end-menu" tabindex="-1" aria-labelledby="end-menu" data-bs-backdrop="static"
                 data-bs-keyboard="false" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -186,7 +174,6 @@
             </div>
 
             <!-- Are you sure modal -->
-
             <div class="modal fade" tabindex="-1" id="sure-modal" tabindex="-1" aria-labelledby="surelabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
