--- a/css/homepage.css
+++ b/css/homepage.css
@@ -100,6 +100,50 @@
     justify-content: center;
 }
 
+@media only screen and (max-width: 1200px) {
+
+    .profile-box {
+      width: 80%;
+    }
+
+  }
+
+  @media only screen and (max-width: 1000px) {
+
+    .profile-box {
+      width: 80%;
+    }
+
+    .welcome{
+font-size: 20px;
+    }
+
+    .logoff-btn{
+        font-size: 20px;
+    }
+
+    .user-pic{
+        display: none;
+    }
+
+    .profile-box-center{
+        justify-content: center;
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .btn-menu{
+        font-size: 25px;
+        width: 70%;
+    }
+
+    .responsive-img{
+        width: auto;
+    }
+
+  }
 
 
 /* 
