--- a/css/welcometrivia.css
+++ b/css/welcometrivia.css
@@ -21,20 +21,20 @@
     width: auto;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.icon-btn{
+.icon-btn {
     cursor: pointer;
 }
 
-.icon-btn:hover{
+.icon-btn:hover {
     color: #8d99ae;
     cursor: pointer;
 }
 
-.icon-color{
+.icon-color {
     color: black;
 }
 
@@ -112,10 +112,10 @@ a{
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
     transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
-  
-  .btn-quiz:hover {
+
+.btn-quiz:hover {
     background-color: #13777a;
-  }
+}
 
 
 .center {
@@ -183,6 +183,75 @@ a{
     animation: arrow-jump 1s infinite;
 }
 
-.alert-warning{
+.alert-warning {
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
+}
+
+@media only screen and (max-width: 1200px) {
+
+    .btn-choices {
+        padding: 50px;
+    }
+
+    .box {
+        height: 800px;
+    }
+
+}
+
+@media only screen and (max-width: 1000px) {
+
+
+    .logo {
+        display: none;
+    }
+
+    .btn-choices {
+        padding: 0;
+    }
+
+    .welcome {
+        font-size: 20px;
+    }
+
+    .logoff-btn,
+    .back-btn {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 770px) {
+
+    .box {
+        height: 1000px;
+    }
+
+    .responsive {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+
+    .responsive-logo {
+        width: auto;
+    }
+
+    .responsive-icons {
+        width: 50%;
+    }
+
+    .box {
+        height: 1200px;
+    }
+
+    .go {
+        padding: 0;
+    }
+
+    .btn-quiz {
+        width: 60%;
+    }
+
 }
