--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -28,10 +28,8 @@
 
         <div class="box">
             <div class="row header header-row">
-                <div class="col-4">
+                <div class="col-4 responsive-icons">
                     
-
-
                     <span class="icon-btn back-btn fa-stack fa-2x ms-4"  data-bs-toggle="tooltip" data-bs-placement="top" title="Go Back">
                         <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                         <i class="fa-solid fa-arrow-left fa-stack-1x fa-inverse icon-color"></i>
@@ -44,7 +42,7 @@
 
                 </div>
 
-                <div class="col-4">
+                <div class="col-4 responsive-logo">
                     <img class="logo" src="../images/logo.png" alt="">
 
                 </div>
@@ -158,8 +156,8 @@
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
 
-                    <button class="btn-quiz mt-4 mb-3 hide" type="submit">
-                        Start a Game <i class="fa-solid fa-arrow-right"></i>
+                    <button class="btn-quiz mt-4 mb-3 hide" type="submit"> 
+                        <p> Start <span class="responsive"> a Game</span> </p><i class="fa-solid fa-arrow-right"></i>
                     </button>
                 </div>
             </div>
