--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
 
-        <div class="box">
+        <div class="box responsive-box">
             <div class="row header header-row">
                 <div class="col-4 responsive-icons">
                     
