--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -157,7 +157,7 @@
                     </div>
 
                     <button class="btn-quiz mt-4 mb-3 hide" type="submit"> 
-                        <p> Start <span class="responsive"> a Game</span> </p><i class="fa-solid fa-arrow-right"></i>
+                        <p class="start-p"> Start <span class="responsive"> a Game</span> </p><i class="fa-solid fa-arrow-right"></i>
                     </button>
                 </div>
             </div>
