--- a/css/welcometrivia.css
+++ b/css/welcometrivia.css
@@ -187,6 +187,10 @@ a {
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
 }
 
+.start-p{
+    margin: 0;
+}
+
 @media only screen and (max-width: 1200px) {
 
     .btn-choices {
