--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -31,9 +31,9 @@
             <div class="row leaderboard">
 
                 <div class="row highscoreTitle">
-                    <div class="col-4"><span>Rank</span></div>
-                    <div class="col-4"><span>Name</span></div>
-                    <div class="col-4"><span>Score</span></div>
+                    <div class="col-4">Rank</div>
+                    <div class="col-4">Name</div>
+                    <div class="col-4">Score</div>
                 </div>
 
                 <div class="row highscore">
