--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -71,9 +71,8 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-
 .highscoreTitle {
-    background-color: white;
+    background-color: #ffffff;
     height: 40px;
     width: 40%;
     display: flex;
@@ -88,7 +87,6 @@
     font-size: larger;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-
 
 .row {
     text-align: center;
